--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
   "dependencies": {
     "axios": "^1.12.2",
     "express": "^5.1.0",
-    "morgan": "^1.10.1"
+    "http-status-codes": "^2.3.0",
+    "morgan": "^1.10.1",
+    "winston": "^3.17.0",
+    "zod": "^4.1.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
